update noi dung

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                 <!-- Food 1 -->
                 <div class="bg-white rounded-lg overflow-hidden shadow-sm hover:shadow-md transition-all hover-scale">
                     <div class="relative h-40 sm:h-48 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1563245372-f21724e3856d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
+                        <img src="vstimage/vit-jpeg-8095-1603884839.jpg"
                             alt="Vịt quay Bắc Kinh"
                             class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
                     </div>
@@ -340,21 +340,20 @@
                 <!-- Food 2 -->
                 <div class="bg-white rounded-lg overflow-hidden shadow-sm hover:shadow-md transition-all hover-scale">
                     <div class="relative h-40 sm:h-48 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1551504734-5ee1c4a1479b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
+                        <img src="vstimage/bun-oc-nam-ninh-5.jpg"
                             alt="Dimsum"
                             class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
                     </div>
                     <div class="p-4">
-                        <h3 class="font-bold text-lg mb-2">Dimsum</h3>
-                        <p class="text-gray-600 text-sm">Các loại bánh hấp nhỏ nhắn với nhân đa dạng, đặc trưng của ẩm
-                            thực Quảng Đông.</p>
+                        <h3 class="font-bold text-lg mb-2">Bún ốc</h3>
+                        <p class="text-gray-600 text-sm">Hương vị thơm ngon khó cưỡng</p>
                     </div>
                 </div>
 
                 <!-- Food 3 -->
                 <div class="bg-white rounded-lg overflow-hidden shadow-sm hover:shadow-md transition-all hover-scale">
                     <div class="relative h-40 sm:h-48 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1585032226651-759b368d7246?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1392&q=80"
+                        <img src="vstimage/tomato-broth-yuanyangguo-3906-8876-9547-1641553128.webp"
                             alt="Lẩu Tứ Xuyên"
                             class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
                     </div>
@@ -368,13 +367,13 @@
                 <!-- Food 4 -->
                 <div class="bg-white rounded-lg overflow-hidden shadow-sm hover:shadow-md transition-all hover-scale">
                     <div class="relative h-40 sm:h-48 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1563245372-f21724e3856d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
-                            alt="Mì vằn thắn"
+                        <img src="vstimage/1-1623814141157.webp"
+                            alt="Mì lão hữu"
                             class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
                     </div>
                     <div class="p-4">
-                        <h3 class="font-bold text-lg mb-2">Mì vằn thắn</h3>
-                        <p class="text-gray-600 text-sm">Sợi mì dai kết hợp với nước dùng đậm đà và nhân sủi cảo thơm
+                        <h3 class="font-bold text-lg mb-2">Mì lão hữu</h3>
+                        <p class="text-gray-600 text-sm">Sợi mì dai kết hợp với nước dùng đậm đà thơm
                             ngon.</p>
                     </div>
                 </div>
@@ -499,7 +498,7 @@
                         </div>
                     </div>
                     <p class="text-sm sm:text-base">"Dịch vụ làm hộ chiếu rất nhanh chóng, nhân viên tư vấn nhiệt tình. Tour
-                        đi Vạn Lý Trường Thành rất tuyệt vời, hướng dẫn viên am hiểu và thân thiện."</p>
+                        đi rất tuyệt vời, hướng dẫn viên am hiểu và thân thiện."</p>
                 </div>
 
                 <!-- Testimonial 2 -->
@@ -519,7 +518,7 @@
                             </div>
                         </div>
                     </div>
-                    <p class="text-sm sm:text-base">"Sim Trung Quốc mua ở đây dùng rất tốt, tốc độ mạng nhanh. Lần sau
+                    <p class="text-sm sm:text-base">"Lần sau
                         đi Trung Quốc chắc chắn sẽ tiếp tục sử dụng dịch vụ của Vạn Sự Thông Travel."</p>
                 </div>
 
@@ -540,7 +539,7 @@
                             </div>
                         </div>
                     </div>
-                    <p class="text-sm sm:text-base">"Tour Thượng Hải - Hàng Châu rất đáng giá, khách sạn tốt, ăn uống
+                    <p class="text-sm sm:text-base">"Tour Nam Ninh rất đáng giá, khách sạn tốt, ăn uống
                         ngon. Chỉ có điều thời gian ở Hàng Châu hơi ngắn, mong lần sau được ở lại lâu hơn."</p>
                 </div>
             </div>
