--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </nav>
             <a href="tel:0876456888"
                 class="bg-yellow-500 hover:bg-yellow-600 text-black font-bold py-2 px-4 rounded-full text-sm flex items-center">
-                <i class="fas fa-phone-alt mr-2"></i>0876 456 888
+                <i class="fas fa-phone-alt mr-2"></i>0397551688
             </a>
         </div>
 
