--- a/index.html
+++ b/index.html
@@ -323,20 +323,7 @@
             <h2 class="text-2xl md:text-3xl font-bold text-center mb-8 md:mb-12 text-gray-800 mobile-center">Ẩm thực
                 Trung Hoa</h2>
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-5 md:gap-6">
-                <!-- Food 1 -->
-                <div class="bg-white rounded-lg overflow-hidden shadow-sm hover:shadow-md transition-all hover-scale">
-                    <div class="relative h-40 sm:h-48 overflow-hidden">
-                        <img src="vstimage/vit-jpeg-8095-1603884839.jpg"
-                            alt="Vịt quay Bắc Kinh"
-                            class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
-                    </div>
-                    <div class="p-4">
-                        <h3 class="font-bold text-lg mb-2">Vịt quay Bắc Kinh</h3>
-                        <p class="text-gray-600 text-sm">Món ăn nổi tiếng với lớp da giòn, thịt mềm, ăn kèm bánh kếp và
-                            hành.</p>
-                    </div>
-                </div>
-
+                
                 <!-- Food 2 -->
                 <div class="bg-white rounded-lg overflow-hidden shadow-sm hover:shadow-md transition-all hover-scale">
                     <div class="relative h-40 sm:h-48 overflow-hidden">
@@ -350,19 +337,7 @@
                     </div>
                 </div>
 
-                <!-- Food 3 -->
-                <div class="bg-white rounded-lg overflow-hidden shadow-sm hover:shadow-md transition-all hover-scale">
-                    <div class="relative h-40 sm:h-48 overflow-hidden">
-                        <img src="vstimage/tomato-broth-yuanyangguo-3906-8876-9547-1641553128.webp"
-                            alt="Lẩu Tứ Xuyên"
-                            class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
-                    </div>
-                    <div class="p-4">
-                        <h3 class="font-bold text-lg mb-2">Lẩu Tứ Xuyên</h3>
-                        <p class="text-gray-600 text-sm">Nổi tiếng với vị cay nồng từ ớt Tứ Xuyên và tiêu hoa, kích
-                            thích vị giác.</p>
-                    </div>
-                </div>
+               
 
                 <!-- Food 4 -->
                 <div class="bg-white rounded-lg overflow-hidden shadow-sm hover:shadow-md transition-all hover-scale">
@@ -380,6 +355,18 @@
                  <a href="#"
                     class="block overflow-hidden rounded-lg shadow-sm hover:shadow-md transition-all hover-scale">
                     <img src="vstimage/z6859775737310_8d0d0fd24b063d96fcf922ac6ab23d87.jpg"
+                        alt="Nghệ thuật Trung Quốc"
+                        class="w-full h-40 sm:h-48 md:h-56 object-cover transition-transform duration-500 hover:scale-110">
+                </a>
+                    <a href="#"
+                    class="block overflow-hidden rounded-lg shadow-sm hover:shadow-md transition-all hover-scale">
+                    <img src="vstimage/z6859775671932_cc736557db70a588c6fe00fbca13a942.jpg"
+                        alt="Nghệ thuật Trung Quốc"
+                        class="w-full h-40 sm:h-48 md:h-56 object-cover transition-transform duration-500 hover:scale-110">
+                </a>
+                    <a href="#"
+                    class="block overflow-hidden rounded-lg shadow-sm hover:shadow-md transition-all hover-scale">
+                    <img src="vstimage/z6859775783136_0fce0252f41385c25ae7b4fd9f62eb73.jpg"
                         alt="Nghệ thuật Trung Quốc"
                         class="w-full h-40 sm:h-48 md:h-56 object-cover transition-transform duration-500 hover:scale-110">
                 </a>
